@@ -370,6 +370,16 @@ install-sendmail: create-dirs
 	ln -sf  ../init.d/sendmail ${EXTDIR}/rc.d/rc5.d/S35sendmail
 	ln -sf  ../init.d/sendmail ${EXTDIR}/rc.d/rc6.d/K25sendmail
 
+install-qpopper: create-dirs
+	install -m ${MODE} blfs/init.d/qpopper   ${EXTDIR}/rc.d/init.d/
+	ln -sf  ../init.d/qpopper ${EXTDIR}/rc.d/rc0.d/K23qpopper
+	ln -sf  ../init.d/qpopper ${EXTDIR}/rc.d/rc1.d/K23qpopper
+	ln -sf  ../init.d/qpopper ${EXTDIR}/rc.d/rc2.d/K23qpopper
+	ln -sf  ../init.d/qpopper ${EXTDIR}/rc.d/rc3.d/S37qpopper
+	ln -sf  ../init.d/qpopper ${EXTDIR}/rc.d/rc4.d/S37qpopper
+	ln -sf  ../init.d/qpopper ${EXTDIR}/rc.d/rc5.d/S37qpopper
+	ln -sf  ../init.d/qpopper ${EXTDIR}/rc.d/rc6.d/K23qpopper
+
 install-sshd: create-dirs
 	install -m ${MODE} blfs/init.d/sshd       ${EXTDIR}/rc.d/init.d/
 	ln -sf  ../init.d/sshd ${EXTDIR}/rc.d/rc0.d/K30sshd
